--- a/DataSharing/package.json
+++ b/DataSharing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-uploader",
+  "name": "data-sharing",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,33 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
-    "@angular/cdk": "~7.3.7",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
-    "@angular/forms": "~8.2.5",
-    "@angular/http": "~7.2.12",
-    "@angular/material": "~7.3.7",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
-    "@okta/okta-angular": "^1.2.2",
-    "@okta/okta-auth-js": "2.8.0",
-    "@okta/okta-signin-widget": "3.2.1",
-    "@types/jquery": "^3.3.29",
-    "@types/lodash": "^4.14.123",
-    "angular-split": "~2.0.1",
-    "hammerjs": "~2.0.8",
-    "jquery": "~3.4.0",
-    "lodash": "~4.17.11",
-    "ngx-dropzone-wrapper": "~7.0.0",
-    "ngx-monaco-editor": "^7.0.0",
-    "ngx-toastr": "^9.1.2",
-    "replace-in-file": "^3.4.4",
-    "aws-sdk": "^2.540.0",
+    "@angular/animations": "~8.2.8",
+    "@angular/common": "~8.2.8",
+    "@angular/compiler": "~8.2.8",
+    "@angular/core": "~8.2.8",
+    "@angular/forms": "~8.2.8",
+    "@angular/platform-browser": "~8.2.8",
+    "@angular/platform-browser-dynamic": "~8.2.8",
+    "@angular/router": "~8.2.8",
     "rxjs": "~6.4.0",
-    "rxjs-compat": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -46,9 +28,9 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.54",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
